--- a/dictator/templates/dictator/Results.html
+++ b/dictator/templates/dictator/Results.html
@@ -9,9 +9,9 @@
     <p>
 
         {% if player.id_in_group == 1 %}
-            You decided to keep <strong>{{ group.kept }}</strong> for yourself.
+            You decided to keep <strong>{{ player.kept }}</strong> for yourself.
         {% else %}
-            Participant 1 decided to keep <strong>{{ group.kept }}</strong>, so
+            Participant 1 decided to keep <strong>{{ player.kept }}</strong>, so
             you got <strong>{{ offer }}</strong>.
         {% endif %}
 
