correcting max value on y axis

--- a/dictator/templates/dictator/Offer.html
+++ b/dictator/templates/dictator/Offer.html
@@ -44,6 +44,8 @@ $(function() {
               }]
           },
           yAxis: {
+             min:0,
+             max:{{Constants.endowment}},
               title: {
                   text: 'Points'
               },
