--- a/dictatorMU/templates/dictatorMU/InstructionsDecision.html
+++ b/dictatorMU/templates/dictatorMU/InstructionsDecision.html
@@ -9,12 +9,14 @@
     <p>
         You will be paired randomly and anonymously with another participant.
         In this study, one of you will be Participant 1 and the other
-        Participant 2. Prior to making a decision, you will learn your role,
-        which will be randomly assigned.
+        Participant 2.
     </p>
     <p>
         There are {{ Constants.endowment }} to split. Participant 1 will
-        decide how many points she or he will retain. Then the rest will go to
+        decide how many points she or he will retain. The rest will go to
         Participant 2.
+    </p>
+    <p>
+      You will take the decision as a Participant 1. Then the decision of only one of two participants will be taken as final.
     </p>
 </div>
